load("@rules_python//python:defs.bzl", "py_binary")
load("@pip//:requirements.bzl", "requirement")

#exports_files(["bqtinstaller.py"])

py_binary(
    name = "bqtinstaller",
    srcs = ["bqtinstaller.py"],
    deps = [requirement("aqtinstall")],
    visibility = ["//visibility:public"],
#    args = [
#        "install-qt",
#        # Pass a path relative to the workspace root. It'll write there if it can.
#        "--bzl-config-out=qt_modules.bzl",
#        "linux",
#        "desktop",
#        "6.4.0",
#    ],
)
